--- a/vEPC_uc3m-nets/operator2.yml
+++ b/vEPC_uc3m-nets/operator2.yml
@@ -216,7 +216,7 @@ node_templates:
         ip_version: 4
         gateway_ip: 192.168.253.2
         cidr: { get_input: heat_net_mgmt_subnet_cidr }
-        enable_dhcp: False
+        #enable_dhcp: False
         dns_nameservers: { get_input: nameservers }
         allocation_pools: { get_input: heat_net_mgmt_subnet_allocation_pools }
       openstack_config: *openstack_config
@@ -233,7 +233,7 @@ node_templates:
       subnet:
         ip_version: 4
         cidr: { get_input: heat_net_an_lte_subnet_cidr }
-        enable_dhcp: False
+        #enable_dhcp: False
         dns_nameservers: { get_input: nameservers }
         allocation_pools: { get_input: heat_net_an_lte_subnet_allocation_pools }
       openstack_config: *openstack_config
@@ -248,7 +248,7 @@ node_templates:
       subnet:
         ip_version: 4
         cidr: { get_input: heat_net_a_subnet_cidr }
-        enable_dhcp: False
+        #enable_dhcp: False
         dns_nameservers: { get_input: nameservers }
         allocation_pools: { get_input: heat_net_a_subnet_allocation_pools }
       openstack_config: *openstack_config
@@ -263,7 +263,7 @@ node_templates:
       subnet:
         ip_version: 4
         cidr: { get_input: heat_net_d_subnet_cidr }
-        enable_dhcp: False
+        #enable_dhcp: False
         dns_nameservers: { get_input: nameservers }
         allocation_pools: { get_input: heat_net_d_subnet_allocation_pools }
       openstack_config: *openstack_config
@@ -278,7 +278,7 @@ node_templates:
       subnet:
         ip_version: 4
         cidr: { get_input: heat_net_gw_subnet_cidr }
-        enable_dhcp: False
+        #enable_dhcp: False
         dns_nameservers: { get_input: nameservers }
         allocation_pools: { get_input: heat_net_gw_subnet_allocation_pools }
       openstack_config: *openstack_config
